# postfixlimit

./: .gitignore  README.md  pyproject.toml
contrib/: postfixlimit.conf
postfixlimit/: config.py  exceptions.py  limiter.py  policyhandler.py  singleton.py
postfixlimit/cli/: postfixlimit.py
